html comment feature

--- a/graphexp.html
+++ b/graphexp.html
@@ -198,7 +198,7 @@
 					<div id="messageArea"></div><div id="outputArea"></div>
 				</div>
 				<div class="aside right_bar" id="details" style="pointer-events:auto;">
-					<div id="nodeInfo" style="pointer-events:none;">
+					<div id="nodeInfo" style="pointer-events:auto;">
 					</div>				
 				</div>
 
